change top bar style
- logo now more centered, bigger
- space between top bar and cyjs model smaller, by eliminating br and adding padding to top bar row

--- a/index.html
+++ b/index.html
@@ -68,18 +68,20 @@
     <!-- container-fluid : start -->
     <div class="container-fluid">
 
-    <div class=row>
-        <div class="col-sm-6 col-xs-6 padding-0">
-            <img src="indra_logo_v2.png" alt="INDRA logo" style="height:30px;"></img> <span class="hidden-xs" style="font:30px bold;text-align: center; vertical-align: middle;font-family: Roboto, sans-serif; ">INDRA-IPM</span>
-        </div>
-        <!-- <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div> -->
-      <div class='col-sm-6 col-xs-6 pull-right'>
-        <!-- Button trigger modal -->
+      <div class=row style="max-height:40px; margin-bottom: 15px;">
+          <div class="col-sm-5 col-xs-4 padding-0">
+              <img src="indra_logo_v2.png" alt="INDRA logo" style="max-height:38px; top:50%; margin-top: 2px; margin-bottom:1px;"></img> <span class="hidden-xs" style="font:30px bold;text-align: center; vertical-align: middle;font-family: Roboto, sans-serif; ">INDRA-IPM</span>
+          </div>
+          <!-- <div class="col-sm-4 col-xs-4 hidden-xs pull-left padding-0" style="font:30px bold;">INDRA-IPM</div> -->
+        <div class='col-sm-3s col-xs-3 pull-right'>
+          <!-- Button trigger modal -->
 
-            <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-            <b class="hidden-xs">MODEL OPTIONS</b>
-            </button>
+              <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
+              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+              <b class="hidden-xs">MODEL OPTIONS</b>
+              </button>
+        </div>
+      </div>
 
 
 
@@ -430,8 +432,6 @@ TIAM activates RAC, which activates PAK.
         </div>
 
       </div>
-  </div>
-  <br>
   <div class="row">
     <div class="col-md-12">
 
