--- a/index.html
+++ b/index.html
@@ -69,40 +69,19 @@
     <div class="container-fluid">
 
       <div class="row" style="max-height:40px; margin-bottom: 15px;">
-          <div class="col-xs-4 col-sm-4 col-md-6 col-lg-5 padding-0">
-            <div class="col-sm-12 padding-0">
-              <img src="indra_logo_v2.png" alt="INDRA logo" style="max-height:38px; top:50%; margin-top: 2px; margin-bottom:1px;"></img>
-              <span class="hidden-xs hidden-sm" style="font:33px bold; vertical-align: middle;font-family: Roboto, sans-serif;">INDRA-IPM</span>
-            </div>
-          </div>
-          <!-- colorbar start -->
-          <div class="col-xs-6 col-sm-7 col-md-3 col-lg-4 float-right">
-            <div class='row small'>
-              <div class='col-xs-4'>
-                <div class="row text-right">wildtype</div>
-                <div class="row text-right">mutant</div>
+          <div class=row>
+              <div class="col-xs-4 col-sm-4 col-md-6 col-lg-5 padding-0">
+                  <img src="indra_logo_v2.png" alt="INDRA logo" style="height:38px;"></img> <span class="hidden-sm hidden-xs" style="font:30px bold;text-align: center; vertical-align: middle;font-family: Roboto, sans-serif; ">INDRA-IPM</span>
               </div>
-              <div class='col-xs-8'>
-                <div class="row">
-                  <svg height='13px' width='100px'>
-                    <defs>
-                      <symbol id="s-rect">
-                        <rect width="10" height="10" x="2" y="2"/>
-                      </symbol>
-                    </defs>
-                    <text x="90" y="0" fill="black">wt</text>
-                    <use xlink:href="#s-rect" x="0" y="0" fill='#f7fcf5' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="10" y="0" fill='#e5f5e0' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="20" y="0" fill='#c7e9c0' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="30" y="0" fill='#a1d99b' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="40" y="0" fill='#74c476' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="50" y="0" fill='#41ab5d' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="60" y="0" fill='#238b45' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="70" y="0" fill='#006d2c' stroke="black" stroke-width="1"/>
-                    <use xlink:href="#s-rect" x="80" y="0" fill='#00441b' stroke="black" stroke-width="1"/>
-                  </svg>
+              <!-- colorbar start -->
+          <div class="col-xs-6 col-sm-7 col-md-3 col-lg-4 float-right">
+              <div class='row small'>
+                <div class='col-xs-4'>
+                  <div class="row text-right">wildtype</div>
+                  <div class="row text-right">mutant</div>
                 </div>
-                <div class='row'>
+                <div class='col-xs-8'>
+                  <div class="row">
                     <svg height='13px' width='100px'>
                       <defs>
                         <symbol id="s-rect">
@@ -110,34 +89,54 @@
                         </symbol>
                       </defs>
                       <text x="90" y="0" fill="black">wt</text>
-                      <!-- ['#fff5eb','#fee6ce','#fdd0a2','#fdae6b','#fd8d3c','#f16913','#d94801','#a63603','#7f2704'] -->
-                      <use xlink:href="#s-rect" x="0" y="0" fill='#fff5eb' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="10" y="0" fill='#fee6ce' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="20" y="0" fill='#fdd0a2' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="30" y="0" fill='#fdae6b' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="40" y="0" fill='#fd8d3c' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="50" y="0" fill='#f16913' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="60" y="0" fill='#d94801' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="70" y="0" fill='#a63603' stroke="black" stroke-width="1"/>
-                      <use xlink:href="#s-rect" x="80" y="0" fill='#7f2704' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="0" y="0" fill='#f7fcf5' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="10" y="0" fill='#e5f5e0' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="20" y="0" fill='#c7e9c0' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="30" y="0" fill='#a1d99b' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="40" y="0" fill='#74c476' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="50" y="0" fill='#41ab5d' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="60" y="0" fill='#238b45' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="70" y="0" fill='#006d2c' stroke="black" stroke-width="1"/>
+                      <use xlink:href="#s-rect" x="80" y="0" fill='#00441b' stroke="black" stroke-width="1"/>
                     </svg>
+                  </div>
+                  <div class='row'>
+                      <svg height='13px' width='100px'>
+                        <defs>
+                          <symbol id="s-rect">
+                            <rect width="10" height="10" x="2" y="2"/>
+                          </symbol>
+                        </defs>
+                        <text x="90" y="0" fill="black">wt</text>
+                        <!-- ['#fff5eb','#fee6ce','#fdd0a2','#fdae6b','#fd8d3c','#f16913','#d94801','#a63603','#7f2704'] -->
+                        <use xlink:href="#s-rect" x="0" y="0" fill='#fff5eb' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="10" y="0" fill='#fee6ce' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="20" y="0" fill='#fdd0a2' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="30" y="0" fill='#fdae6b' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="40" y="0" fill='#fd8d3c' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="50" y="0" fill='#f16913' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="60" y="0" fill='#d94801' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="70" y="0" fill='#a63603' stroke="black" stroke-width="1"/>
+                        <use xlink:href="#s-rect" x="80" y="0" fill='#7f2704' stroke="black" stroke-width="1"/>
+                      </svg>
+                  </div>
                 </div>
               </div>
+              <div class='row'>
+                <div class='col-xs-4'></div>
+                <div class='col-xs-8'>expression</div>
+              </div>
             </div>
-            <div class='row'>
-              <div class='col-xs-4'></div>
-              <div class='col-xs-8'>expression</div>
-            </div>
-          </div>
-          <!-- colorbar end -->
-          <div class='col-sm-1 col-xs-1 col-md-2 col-lg-2 pull-right'>
-          <!-- Button trigger modal -->
-
-              <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
-              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-              <b class="hidden-xs">MODEL OPTIONS</b>
-              </button>
-        </div>
+            <!-- colorbar end -->
+              <div class='col-sm-1 col-xs-1 col-md-2 col-lg-2 pull-right'>
+                  <!-- Button trigger modal -->
+        
+                      <button type="button" class="btn btn-default btn-lg pull-right" data-toggle="modal" data-target="#menu">
+                      <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                      <b class="hidden-xs">MODEL OPTIONS</b>
+                      </button>
+                </div>
+          </div></div></div>
       </div>
 
 
