--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@ STK11 activates PRKAA, PRKAB and PRKAG.
 PRKAA, PRKAB and PRKAG deactivate mTORC2.
 mTORC2 deactivates EIF4EBP1.
 mTORC2 activates RPS6KB1 and RPS6KB2.
-TIAM activates RAC, which activates PAK.
-            </textarea>
+TIAM activates RAC, which activates PAK.</textarea>
           </div>
 
        </form>
